k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itsm-ingress
  namespace: twisteritsm
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "selfsigned-ca"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - itsm.twisterlab.local
      secretName: itsm-tls
  rules:
    - host: itsm.twisterlab.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: itsm-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itsm-web
                port:
                  number: 80
